--- a/auctions/templates/auctions/navbar.html
+++ b/auctions/templates/auctions/navbar.html
@@ -25,20 +25,16 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                <a class="nav-link" href="{% url 'index' %}">Products</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'category' %}">Categories</a>
             </li>
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'newlisting' %}">List Your Item</a>
-                </li>
-            {% endif %}
         </ul>
+
+        <div class="searchbar">
+            <input type="text" name="searchbar" placeholder="Search for products" id="searchbar"><input type="button" value="Search">
+        </div>
         
         <!-- Right links -->
         <div class="d-flex align-items-center">
