--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -26,7 +26,7 @@
                     <div class="product_details">
                         <h2>{{ listing.title }}</h2>
                         <p>Category: {{ listing.category }}</p>
-                        <p>Price: ${{ listing.price}}</p>
+                        <p>Price: ${{ listing.start_bid}}</p>
                     </div>
 
                 </div>
