--- a/auctions/templates/auctions/navbar.html
+++ b/auctions/templates/auctions/navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="navbrand">
         <!-- Navbar brand -->
-        <h3>Autions</h3>
+        <h3>Marketplace</h3>
       </div>
       
       <!-- Toggle button -->
