cart product price

--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -31,14 +31,7 @@
                         <h5>Category: {{ listing.list_id.category }}</h5>
                         <br>
                         
-                        {% if listing.list_id.bid.amount %}
-                            {% if listing.list_id.active_status == True %}
-                                <h5>Current Bid: ${{ listing.list_id.bid.amount}}</h5>
-                            {% else %}
-                                <h5>Winning Bid: ${{ listing.list_id.bid.amount}}</h5>
-                            {% endif %}
-                        {% endif %}
-                        <h5>Starting Bid: ${{listing.list_id.start_bid}}</h5>
+                        <h5>Price: ${{ listing.list_id.starting_bid }}</h5>
                         
                         <br>
                         {% if listing.list_id.active_status == True %}
