price value in cart

--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -31,7 +31,7 @@
                         <h5>Category: {{ listing.list_id.category }}</h5>
                         <br>
                         
-                        <h5>Price: ${{ listing.list_id.starting_bid }}</h5>
+                        <h5>Price: ${{ listing.list_id.start_bid }}</h5>
                         
                     </li>
                 </ul>
