--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -14,8 +14,7 @@
     <form action="{% url 'index' %}">
         {% csrf_token %}
         <label for="favcolor">Select your preferred color:</label> &nbsp
-        <input type="color" id="favcolor" name="favcolor" value="#ff0000"><br><br>
-        <input type="submit" value="Select">
+        <a href="#"><button id="btn1" style="border:none; width:50px; height:30px; background-color:#E7B19B;">&nbsp</button></a>&nbsp <a href ="#"><button id="btn2" style="border:none; width:50px; height:30px; background-color: #F1C27D;">&nbsp </button></a>&nbsp <a href="#"><button id="btn3" style="border:none; width:50px; height:30px; background-color:#E0AC69;">&nbsp</button></a>&nbsp <a href="#"><button id="btn4" style="border:none; width:50px; height:30px; background-color: #E0AC69;">&nbsp</button></a>
       </form>
 
         
