orders page in progress

--- a/auctions/templates/auctions/navbar.html
+++ b/auctions/templates/auctions/navbar.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'watchlist' %}">Cart</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'orders' %}">Orders</a>
+        </li>
         </ul>
 
         {% if user.is_authenticated %}
